<resources>
    <string name="app_name">博力云社区</string>
    <string name="success_send">发送成功</string>
    <string name="success_login">登录成功</string>
    <string name="success_register">注册成功</string>
    <string name="success_change_password">修改密码成功</string>
    <string name="success_change">修改成功</string>
    <string name="success_delete">删除成功</string>
    <string name="success_unbind">解绑成功</string>
    <string name="error_to_connect_server">网络连接失败!</string>
    <string name="error_no_connection">无网络连接!</string>
    <string name="error_to_connect_host">主机连接失败!</string>
    <string name="error_timeout">连接主机超时</string>
    <string name="error_to_connect_host_try_again_later">无法连接主机，请稍后重试</string>
    <string name="error_send">发送失败</string>
    <string name="error_wrong_phone_number">手机号不正确</string>
    <string name="error_wrong_verifi_code_length">请输入6位验证码</string>
    <string name="error_wrong_password_confirm">两次密码不一致</string>
    <string name="error_wrong_password">密码至少8位</string>
    <string name="error_no_data">暂无任何内容</string>
    <string name="error_load_data">数据未加载</string>
    <string name="error_network_error">当前网络异常，下拉重新加载</string>
    <string name="error_name_is_null">名字不能为空</string>
    <string name="error_data">数据异常</string>
    <string name="error_link">链接错误</string>
    <string name="error_open_browser">无法打开外部浏览器</string>
    <string name="error_open_camera">无法获取摄像头权限</string>
    <string name="refresh">刷新</string>
    <string name="done">完成</string>
    <string name="property">物业</string>
    <string name="toady">今天</string>
    <string name="checkout">查看</string>
    <string name="repair">报修</string>
    <string name="complain">投诉</string>
    <string name="placard">公告</string>
    <string name="information">资讯</string>
    <string name="payment">缴费</string>
    <string name="jujia">聚家</string>
    <string name="more">更多</string>
    <string name="polyhome">智能家居</string>
    <string name="polyhome_hengwen">恒温模式</string>
    <string name="polyhome_anfang">安防模式</string>
    <string name="signature">签到</string>
    <string name="signature_notice">每日签到  赢Poly币</string>
    <string name="poly_home_control">博力恒昌智能控制</string>
    <string name="medical">医疗</string>
    <string name="medical_notice">体检报告及时查看</string>
    <string name="exit_app">再按一次, 退出应用</string>
    <string name="repair_">报修</string>
    <string name="complaint_">投诉建议</string>
    <string name="placard_detail">%1$s详情</string>
    <string name="error_no_browser">无可用浏览器，请下载后重试</string>
    <string name="new_repair">新增报修</string>
    <string name="repair_device">报修设备</string>
    <string name="pop_not_process">未处理</string>
    <string name="pop_reply">已回复</string>
    <string name="pop_processed">已处理</string>
    <string name="pop_closed">已关闭</string>
    <string name="pop_all">全部</string>
    <string name="pop_windows">门窗类</string>
    <string name="pop_walls">墙类</string>
    <string name="pop_elevators">电梯类</string>
    <string name="pop_water_elec">水电类</string>
    <string name="pop_locks">锁类</string>
    <string name="repair_type">报修类型</string>
    <string name="repair_unchecked">未选择</string>
    <string name="repair_record">报修记录</string>
    <string name="repair_text_hint">输入你的报修内容...</string>
    <string name="repair_none">未选择</string>
    <string name="pop_personal">个人</string>
    <string name="pop_common">公共</string>
    <string name="complain_theme">主题</string>
    <string name="complain_text_hint">请输入你的内容...</string>
    <string name="complain_text_hint_complaint">输入你的投诉内容...</string>
    <string name="complain_text_hint_advice">输入你的建议内容...</string>
    <string name="complain_text_hint_celebrate">输入你的表扬内容...</string>
    <string name="advice">建议</string>
    <string name="celebrate">表扬</string>
    <string name="new_complain">新增投诉</string>
    <string name="complain_detail">投诉建议</string>
    <string name="confirm_resend">重新发送?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_logout">确定退出登录?</string>
    <string name="im_send">发送</string>
    <string name="input_limit_1000">当前字数: %1$s /1000</string>
    <string name="input_limit_800">当前字数: %1$s /800</string>
    <string name="no_camera_permission">无法获取摄像头权限</string>
    <string name="show_big_pic">查看大图</string>
    <string name="my_village">我的小区</string>
    <string name="room_manage">房间管理</string>
    <string name="member_manage">成员管理</string>
    <string name="message_center">消息中心</string>
    <string name="my_points">我的积分</string>
    <string name="settings">设置</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_account_psw_wrong">账号或密码有误</string>
    <string name="login_login">登录</string>
    <string name="login_regist">注册</string>
    <string name="login_forget_psw">忘记密码?</string>
    <string name="regist_phone">手机号</string>
    <string name="regist_regist">注册</string>
    <string name="regist_verification_code">验证码</string>
    <string name="regist_password">密码 %1$s</string>
    <string name="regist_get_verification_code">获取验证码</string>
    <string name="regist_get_verification_later">s后重新获取</string>
    <string name="regist_find_password">找回密码</string>
    <string name="im_no_message">暂无消息</string>
    <string name="no_data">暂无数据</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="complain_header_title">反馈记录</string>
    <string name="please_choose_theme">请选择主题</string>
    <string name="please_input_your_content">请输入你的内容</string>
    <string name="please_input_your_phone">请输入联系方式</string>
    <string name="upload_pic_failed">图片上传失败</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_failed">提交失败</string>
    <string name="upload_failed">上传文件失败</string>
    <string name="phone">手机</string>
    <string name="no_title">无标题</string>
    <string name="please_do_not_send_empty_message">请不要发送空消息^_^</string>
    <string name="send_success">发送成功</string>
    <string name="pattren_M_D">M月d日</string>
    <string name="please_choose_repair_device">请选择报修设备</string>
    <string name="please_choose_repair_type">请选择报修类型</string>
    <string name="repair_header_title">报修记录</string>
    <string name="repair_detail">报修详情</string>
    <string name="repair_personal">个人报修</string>
    <string name="repair_common">公共区域报修</string>
    <string name="no_type">未指定类型</string>
    <string name="no_device">未指定设备</string>
    <string name="friend">友邻</string>
    <string name="pop_publish_invitation">发布帖子</string>
    <string name="pop_publish_unused">发布闲置</string>
    <string name="input_title">请输入标题</string>
    <string name="new_invitation">新建帖子</string>
    <string name="input_more">还可输入</string>
    <string name="column">栏目</string>
    <string name="sort">分类</string>
    <string name="input_introduce">请输入商品介绍...</string>
    <string name="new_unused">新建闲置</string>
    <string name="commit">提交</string>
    <string name="write_comment">写评论...</string>
    <string name="reply_comment">回复评论</string>
    <string name="confirm_cancel">当前编辑的内容还未提交\n确定取消?</string>
    <string name="please_input_your_title">请输入标题</string>
    <string name="please_choose_sections">请选择栏目</string>
    <string name="get_sections_error">当前网络不佳,正在获取栏目列表...请稍候</string>
    <string name="second_hand_price">二手价:</string>
    <string name="￥">￥</string>
    <string name="origin_price">原价:</string>
    <string name="discount">是否接受议价</string>
    <string name="please_input_your_second_hand_price">请输入闲置物品的二手价</string>
    <string name="web_view_load_error">加载失败了,点我或者下拉刷新试试</string>
    <string name="choose_village_family">选择小区或家庭</string>
    <string name="scan_code_notice">点击右上方按钮扫描室内机的二维码即可加入</string>
    <string name="all_area">所有地区</string>
    <string name="join_village">加入%1$s</string>
    <string name="building">楼栋号</string>
    <string name="unit">单元号</string>
    <string name="room">房间号</string>
    <string name="confirm_join">确认加入</string>
    <string name="please_input_building_num">请输入楼栋号</string>
    <string name="please_input_unit_num">请输入单元号</string>
    <string name="please_input_room_num">请输入房间号</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="scan_notice">进入智能对讲系统室内机的设置页面，点击二维码后出现二维码，然后进行扫描</string>
    <string name="my_village_or_family">我的小区或家庭</string>
    <string name="clear_cache">清除缓存</string>
    <string name="appraise">评价应用</string>
    <string name="about">关于我们</string>
    <string name="user_agreement">用户协议</string>
    <string name="logout">退出登录</string>
    <string name="family">家庭</string>
    <string name="village">小区</string>
    <string name="uncheck">(未审核)</string>
    <string name="check">(已审核)</string>
    <string name="message_title_all">全部</string>
    <string name="message_title_system">系统</string>
    <string name="message_title_orders">订单</string>
    <string name="message_title_property">物业</string>
    <string name="no_authority">当前处在小区权限下,无法进行此操作,请切换至家庭权限</string>
    <string name="commit_to_verify">已提交审核</string>
    <string name="message_all">全部消息</string>
    <string name="message_system">系统消息</string>
    <string name="message_order">订单消息</string>
    <string name="message_friend">友邻消息</string>
    <string name="message_property">物业消息</string>
    <string name="user_info">个人信息</string>
    <string name="save">保存</string>
    <string name="edit_avatar">编辑头像</string>
    <string name="nickname">昵称</string>
    <string name="email">邮箱</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="change_nick_name">修改昵称</string>
    <string name="change_email">更改邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="change_sex">选择性别</string>
    <string name="change_user_info_success">修改信息成功</string>
    <string name="camera">相机</string>
    <string name="photo_library">照片库</string>
    <string name="choose_avatar">请选择图片来源</string>
    <string name="change_avatar_success">头像更改成功</string>
    <string name="confirm_clear_cache">确认清除缓存吗?</string>
    <string name="property_payment">物业缴费</string>
    <string name="un_payment">未缴费</string>
    <string name="paymented">已缴费</string>
    <string name="paymented_total">已缴合计</string>
    <string name="un_payment_total">未缴合计</string>
    <string name="pop_property_pay">物业费</string>
    <string name="pop_water_pay">水费</string>
    <string name="pop_elec_pay">电费</string>
    <string name="pop_gas_pay">燃气费</string>
    <string name="pop_other">其他</string>
    <string name="payment_yuan">%1$s元</string>
    <string name="pay_now">立即缴费</string>
    <string name="pay_death_line">截止:%1$s</string>
    <string name="pay_day">缴费日期:%1$s</string>
    <string name="already_overrun_day">已超过%1$d天</string>
    <string name="surplus_day">剩余%1$d天</string>
    <string name="surplus_0_day">截止今日</string>
    <string name="charge_object">收费对象:</string>
    <string name="pay_normal">正常缴费</string>
    <string name="late_x_day">超过%1$s天,</string>
    <string name="x_exceed">产生</string>
    <string name="yuan">元</string>
    <string name="expiry_price">滞纳金</string>
    <string name="adjust_accounts">结算</string>
    <string name="pay_name">费用名称</string>
    <string name="pay_type">费用类型</string>
    <string name="pay_object">收费对象</string>
    <string name="pay_death_line_">截止日期</string>
    <string name="total">合计:</string>
    <string name="pay_order">支付费用</string>
    <string name="choose_payment">选择支付方式</string>
    <string name="tencent_pay">微信支付</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="uninstall_smart_home">卸载 \"智能家居模块\"</string>
    <string name="room_name_length_5">不超过5个字符</string>
    <string name="room_name">房间名称</string>
</resources>