<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:background="@color/color_ffffff"
    android:orientation="horizontal">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sunday"
        android:textColor="@color/color_acacac"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/monday"
        android:textColor="@color/color_727272"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textColor="@color/color_727272"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textColor="@color/color_727272"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thursday"
        android:textColor="@color/color_727272"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/friday"
        android:textColor="@color/color_727272"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/saturday"
        android:textColor="@color/color_acacac"
        android:textSize="@dimen/sp_14" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3" />

</LinearLayout>