<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94.4dp"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="@string/login_account"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@null"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@color/color_ceced2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="@string/login_password"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_input_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_11"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_11"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:background="@mipmap/icon_send_failed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_2"
            android:text="@string/login_account_psw_wrong" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:background="@drawable/bg_green_button"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/sp_20" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_11"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_11">

        <TextView
            android:id="@+id/tv_forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_psw"
            android:textColor="@color/color_a8a8a8"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_regist"
            android:textColor="@color/color_a8a8a8"
            android:textSize="@dimen/sp_15" />

    </RelativeLayout>

</LinearLayout>