<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ebecec"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_ceced2" />

        <RelativeLayout
            android:id="@+id/layout_cache"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:drawableRight="@mipmap/icon_right_arrow"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dp_14"
                android:paddingRight="@dimen/dp_14"
                android:singleLine="true"
                android:text="@string/clear_cache"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="right|center"
                android:paddingRight="@dimen/dp_28"
                android:singleLine="true"
                android:textColor="@color/color_a8a8a8"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_14"
            android:background="@color/color_ceced2" />

        <TextView
            android:id="@+id/tv_appraise"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:gravity="center|left"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:singleLine="true"
            android:text="@string/appraise"
            android:textColor="@color/color_a8a8a8"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_14"
            android:background="@color/color_ceced2" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:drawableRight="@mipmap/icon_right_arrow"
            android:gravity="center|left"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:singleLine="true"
            android:text="@string/about"
            android:textColor="@color/color_a8a8a8"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_ceced2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_uninstall_smarthome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginTop="@dimen/dp_54"
        android:background="@color/color_ffffff"
        android:gravity="center"
        android:text="@string/uninstall_smart_home"
        android:textColor="@color/color_FD412B"
        android:textSize="@dimen/sp_14" />

    <View
        android:id="@+id/smart_home_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ceced2" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:background="@color/color_ffffff"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/color_FD412B"
        android:textSize="@dimen/sp_14" />

</LinearLayout>