<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ebecec"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_ceced2" />

        <EditText
            android:maxLines="1"
            android:maxLength="6"
            android:id="@+id/et_building"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/building"
            android:paddingLeft="@dimen/dp_14"
            android:textColor="@color/color_a8a8a8"
            android:textColorHint="@color/color_a8a8a8"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_14"
            android:background="@color/color_ceced2" />

        <EditText
            android:maxLines="1"
            android:maxLength="6"
            android:id="@+id/et_unit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/unit"
            android:paddingLeft="@dimen/dp_14"
            android:textColor="@color/color_a8a8a8"
            android:textColorHint="@color/color_a8a8a8"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_14"
            android:background="@color/color_ceced2" />

        <EditText
            android:maxLines="1"
            android:maxLength="6"
            android:id="@+id/et_room"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/room"
            android:paddingLeft="@dimen/dp_14"
            android:textColor="@color/color_a8a8a8"
            android:textColorHint="@color/color_a8a8a8"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_ceced2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_54"
        android:background="@drawable/bg_green_button"
        android:gravity="center"
        android:text="@string/confirm_join"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/sp_20" />

</LinearLayout>